# coremark

./: CMakeLists.txt
simple/: core_portme.c
